--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,44 +3,44 @@
     padding: 0;
     margin: 0;
 }
-
+/*makes the backgroud of the body a diffrent color*/
 body {
     background-color: #d9dcd6;
 }
-
-.header {
+/*changes the header*/
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
-
-.header h1 {
+/**/
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
-
-.header h1 .seo {
+/*changes seo in horiseon*/
+header h1 seo {
     color: #d9dcd6;
 }
-
-.header div {
+/*changes the div in the header*/
+header div {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-
-.header div ul {
+/*changes the list style to none in the div*/
+header div ul {
     list-style-type: none;
 }
-
-.header div ul li {
+/*changes the list items in the list*/
+header div ul li {
     display: inline-block;
     margin-left: 25px;
 }
-
+/*changes all a items*/
 a {
     color: #ffffff;
     text-decoration: none;
